Fixed issue with text visibility in work page

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -40,6 +40,10 @@ p {
 	color:red;
 }
 
+.black {
+    color:black;
+}
+
 .white {
 	color:white;
 }
